refactor
Create Abstract class who is implementing a APIService interface with basic methods.